[gd_scene load_steps=20 format=2]

[ext_resource path="res://Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/Game.gd" type="Script" id=2]
[ext_resource path="res://game/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/wall/impactWood_medium_000.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/wall/impactWood_medium_003.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/paddle/impactGlass_medium_003.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/paddle/impactGlass_medium_000.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/wall/impactWood_medium_001.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/wall/impactWood_medium_002.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/wall/impactWood_medium_004.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/paddle/impactGlass_medium_001.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/paddle/impactGlass_medium_002.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/paddle/impactGlass_medium_004.ogg" type="AudioStream" id=15]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17, 302 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -596.0
margin_top = -418.0
margin_right = 598.0
margin_bottom = 358.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="World" type="Node2D" parent="."]

[node name="UpperWall" parent="World" instance=ExtResource( 4 )]
position = Vector2( 0, 335 )

[node name="LowerWall" parent="World" instance=ExtResource( 4 )]
position = Vector2( -1, -335 )

[node name="RightGoal" type="Area2D" parent="World"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/RightGoal"]
position = Vector2( -525, 0 )
shape = SubResource( 3 )

[node name="LeftGoal" type="Area2D" parent="World"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/LeftGoal"]
position = Vector2( 525, 0 )
shape = SubResource( 3 )

[node name="LeftPlayer" parent="." instance=ExtResource( 5 )]
position = Vector2( -475, 0 )

[node name="RightPlayer" parent="." instance=ExtResource( 5 )]
position = Vector2( 475, 0 )

[node name="Ball" parent="." instance=ExtResource( 3 )]

[node name="Score" type="Node" parent="."]

[node name="RightScore" type="Label" parent="Score"]
anchor_top = -0.00116394
anchor_bottom = -0.00116394
margin_left = 7.63222
margin_top = -280.85
margin_right = 61.6322
margin_bottom = -181.85
custom_fonts/font = SubResource( 4 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="Label" parent="Score"]
visible = false
anchor_top = -0.00116394
anchor_bottom = -0.00116394
margin_left = -27.2641
margin_top = -275.207
margin_right = 26.7359
margin_bottom = -224.207
custom_fonts/font = SubResource( 4 )
text = "_
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftScore" type="Label" parent="Score"]
anchor_top = -0.00116394
anchor_bottom = -0.00116394
margin_left = -55.1234
margin_top = -281.603
margin_right = -1.12335
margin_bottom = -182.603
custom_fonts/font = SubResource( 4 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Node" parent="."]

[node name="Paddle" type="Node" parent="Audio"]

[node name="AudioPlayer" type="AudioStreamPlayer" parent="Audio/Paddle"]
stream = ExtResource( 9 )

[node name="AudioPlayer2" type="AudioStreamPlayer" parent="Audio/Paddle"]
stream = ExtResource( 13 )

[node name="AudioPlayer3" type="AudioStreamPlayer" parent="Audio/Paddle"]
stream = ExtResource( 14 )

[node name="AudioPlayer4" type="AudioStreamPlayer" parent="Audio/Paddle"]
stream = ExtResource( 8 )

[node name="AudioPlayer5" type="AudioStreamPlayer" parent="Audio/Paddle"]
stream = ExtResource( 15 )

[node name="Wall" type="Node" parent="Audio"]

[node name="AudioPlayer6" type="AudioStreamPlayer" parent="Audio/Wall"]
stream = ExtResource( 6 )

[node name="AudioPlayer7" type="AudioStreamPlayer" parent="Audio/Wall"]
stream = ExtResource( 10 )

[node name="AudioPlayer8" type="AudioStreamPlayer" parent="Audio/Wall"]
stream = ExtResource( 11 )

[node name="AudioPlayer9" type="AudioStreamPlayer" parent="Audio/Wall"]
stream = ExtResource( 7 )

[node name="AudioPlayer10" type="AudioStreamPlayer" parent="Audio/Wall"]
stream = ExtResource( 12 )
[connection signal="body_entered" from="World/RightGoal" to="." method="_on_RightGoal_body_entered"]
[connection signal="body_entered" from="World/LeftGoal" to="." method="_on_LeftGoal_body_entered"]
[connection signal="collided_paddle" from="Ball" to="." method="_on_Ball_collided_paddle"]
[connection signal="collided_wall" from="Ball" to="." method="_on_Ball_collided_wall"]
